--- a/react-forum/config/database.yml
+++ b/react-forum/config/database.yml
@@ -29,24 +29,24 @@ development:
 #   <<: *default
 #   database: db/development
 
-test:
-  <<: *default
-  database: db/test
+# test:
+#   <<: *default
+#   database: db/test
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   <<: *default
-#   database: db/test.sqlite3
+test:
+  <<: *dev_default
+  database: db/test.sqlite3
+
+production:
+  <<: *dev_default
+  database: db/production.sqlite3
 
 # production:
 #   <<: *default
-#   database: db/production.sqlite3
-
-production:
-  <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
-  database: drus_db
-  username: drus_db_user
-  password: <%= ENV['MYSITE_DB_PASSWORD'] %>
+#   url: <%= ENV['DATABASE_URL'] %>
+#   database: drus_db
+#   username: drus_db_user
+#   password: <%= ENV['MYSITE_DB_PASSWORD'] %>
