--- a/react-forum/package.json
+++ b/react-forum/package.json
@@ -9,6 +9,7 @@
     "bootstrap-icons": "^1.10.3",
     "esbuild": "^0.16.12",
     "react": "^18.2.0",
+    "react-client-session": "^0.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "sass": "^1.57.1"
